# fanzadl-webui

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  biome.json  docker-compose-dev.yml  docker-compose.yml  main.py  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: publish.yml  release-please.yml
.sonar/: report-task.txt
backend/fanzadl_webui/: app.py  dependencies.py  filename.py  history_db.py  library_db.py  log_handler.py  manager.py  models.py  scheduler.py  state.py  webhook.py
backend/fanzadl_webui/routes/: _utils.py  auth.py  history.py  images.py  jobs.py  library.py  notifications.py  refresh_library.py  settings.py  streams.py  url.py
backend/fanzadl_webui/routes/download/: __init__.py  auto_enqueue.py  routes.py  runner.py
backend/fanzadl_webui/store/: api_key.py  base.py  config.py  token.py
docker/: docker-compose-dev.yml  docker-compose.yml
fanzadl_webui/: api_key_store.py  app.py  config_store.py  dependencies.py  events.py  filename.py  jobs.py  library_cache.py  library_db.py  log_handler.py  manager.py  models.py  scheduler.py  state.py  token_store.py  webhook.py
fanzadl_webui/routes/: _utils.py  auth.py  download.py  history.py  images.py  library.py  notifications.py  refresh_library.py  settings.py  streams.py  url.py
fanzadl_webui/routes/download/: auto_enqueue.py  routes.py  runner.py
fanzadl_webui/store/: api_key.py  config.py  session.py  token.py
frontend/: biome.json  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.d.ts  app.html
frontend/src/lib/: api.ts  filename.ts  theme.ts  types.ts
frontend/src/lib/components/: Badge.svelte  Button.svelte  DownloadModal.svelte  ErrorAlert.svelte  FormCheckbox.svelte  JobCard.svelte  JobGroup.svelte  LibraryTable.svelte  Select.svelte  Spinner.svelte  TextInput.svelte  (+2 more)
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
(+4 files in other folders)
