[project]
name = "fanzadl-webui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fanzadl",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "m3u8>=6.0.0",
    "pydantic-settings>=2.9.1",
    "sse-starlette>=2.0.0",
    "uvicorn>=0.48.0",
]


[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812", "PLR2004"]

[tool.uv.sources]
fanzadl = { git = "https://github.com/RodolfoFigueroa/FanzaDL", tag = "v0.1.6" }

[dependency-groups]
dev = ["ipykernel<7", "pre-commit>=4.6.0"]
