[project]
name = "fanzadl-webui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "bcrypt>=4.3.0",
    "cryptography>=44.0.3",
    "fanzadl==0.1.18",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "m3u8>=6.0.0",
    "pydantic-settings>=2.9.1",
    "sse-starlette>=2.4.1",
    "uvicorn>=0.48.0",
]


[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812", "PLR2004", "ANN002", "ANN003"]

[tool.uv.sources]
fanzadl = { git = "https://github.com/RodolfoFigueroa/FanzaDL" }

[dependency-groups]
dev = [
    "httpx-sse>=0.4.3",
    "ipykernel<7",
    "pre-commit>=4.6.0",
    "pysonar>=1.6.0.4905",
]
